<resources>
    <string name="app_name">Pokèmon D20</string>
    <string name="title_name">Pokèmon D20</string>

    <!--SQL Query Strings -->
    <string name="pokemon_id_to_moves">
        SELECT DISTINCT pokemon_id AS p_id, move_id AS m_id, moves.identifier AS Name
        FROM pokemon_moves INNER JOIN moves
        ON m_id = moves.id WHERE p_id = 1;
    </string>
    <string name="moves_to_pokemon_query">
        SELECT DISTINCT move_names.move_id AS "Move ID", move_names.name AS "Move Identifier",
        pokemon_species.id AS "Pokemon ID", pokemon_species.identifier AS "Pokemon Identifier"
        FROM pokemon_moves INNER JOIN move_names ON pokemon_moves.move_id = move_names.move_id
        INNER JOIN pokemon ON pokemon_moves.pokemon_id = pokemon.id
        INNER JOIN pokemon_species ON pokemon.species_id = pokemon_species.id
        WHERE move_names.name = :moveName;
    </string>

    <!-- Pokemon To Moves Strings -->
    <string name="pkmn_to_moves_button_main">Moves</string>
    <string name="pkmn_to_moves_title">Pokèmon To Moves</string>
    <string name="pkmn_to_moves_button">Display Moves</string>
    <string name="pkmn_to_moves_input">Enter pokèmon name</string>
    <string name="pkmn_to_moves_description">
        Enter the name of a pokèmon and hit the button to display
        all the moves it can learn.
    </string>

    <!-- Moves To Pokemon Strings -->
    <string name="moves_to_pkmn_button_main">Pokèmon</string>
    <string name="moves_to_pkmn_title">Moves To Pokèmon</string>
    <string name="moves_to_pkmn_description">
        Enter the name of a move and hit the button to display
        all pokèmon that can learn it.
    </string>
    <string name="moves_to_pkmn_input">Enter move name</string>
    <string name="moves_to_pkmn_button">Display Pokèmon</string>

    <!-- Pokemon Stats Strings-->
    <string name="new_stats_button_main">New Stats</string>
    <string name="new_stats_title">New Stats Generation</string>
    <string name="new_stats_description">Enter the name of a Pokèmon,
     and hit the button to generate new stats</string>
    <string name="new_stats_button">Generate</string>
    <string name="new_stats_pokemon_input">Pokèmon name</string>
    <string name="new_stats_pokemon_attack">Attack</string>
    <string name="new_stats_pokemon_defense">Defense</string>
    <string name="new_stats_pokemon_sp_attack">Sp. Attack</string>
    <string name="new_stats_pokemon_sp_defense">Sp. Defense</string>
    <string name="new_stats_pokemon_speed">Speed</string>
    <string name="new_stats_pokemon_hp">HP</string>


</resources>