<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewStatsActivity">

    <!-- TODO: Add basic design for new Pokemon
            -User enters Pokemon
            -Stats are generated for that specific Pokemon. Based off of base stats?
                *Add "IVs" that only add variability to stats
            -Generates nature; does not affect stats or abilities
             -->

    <Button
        android:id="@+id/btnNewStatsCalculate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:text="@string/move_index_button"
        app:backgroundTint="@android:color/holo_red_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/etextNewStatsPokemonName"
        app:layout_constraintTop_toBottomOf="@+id/txtNewStatsDescription" />

    <TextView
        android:id="@+id/idNewStatsTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:text="@string/new_stats_title"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtNewStatsDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:text="@string/new_stats_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idNewStatsTitle" />

    <EditText
        android:id="@+id/etextNewStatsPokemonName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/new_stats_pokemon_input"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNewStatsDescription" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="24dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etextNewStatsPokemonName">

        <TableLayout
            android:id="@+id/tblStats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/txtNewStatsAttack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@color/black"
                    android:drawableTop="@color/black"
                    android:drawableRight="@color/black"
                    android:drawableBottom="@color/black"
                    android:text="@string/new_stats_pokemon_attack" />

                <TextView
                    android:id="@+id/txtNewStatsAttackVal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="N/A" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/txtNewStatsDefense"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/new_stats_pokemon_defense" />

                <TextView
                    android:id="@+id/txtNewStatsDefenseVal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="N/A" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/txtNewStatsSpAttack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/new_stats_pokemon_sp_attack" />

                <TextView
                    android:id="@+id/txtNewStatsSpAttackVal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="N/A" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/txtNewStatsSpDefense"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/new_stats_pokemon_sp_defense" />

                <TextView
                    android:id="@+id/txtNewStatsSpDefenseVal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="N/A" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/txtNewStatsHP"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/new_stats_pokemon_hp" />

                <TextView
                    android:id="@+id/txtNewStatsHPVal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="N/A" />
            </TableRow>
        </TableLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TableLayout
            android:id="@+id/tblNature"
            android:layout_width="100dp"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/txtNatureTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Nature"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/ic_temp_background"
                    android:textStyle="bold" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/txtNatureDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Super duper stubborn" />
            </TableRow>

        </TableLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>